# diyu-agent

./: .commitlintrc.yml  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: diyu-architect.md  diyu-security-reviewer.md  diyu-tdd-guide.md
.claude/commands/: adversarial-fix-verify.md  cross-reference-audit.md  full-audit.md  gate-review.md  phase1-build.md  phase2-build.md  systematic-review.md
.claude/skills/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  milestone-check.yml  task-card-check.yml
delivery/: install.sh  manifest.yaml  milestone-matrix.schema.yaml  milestone-matrix.yaml  operations-readiness-checklist.md  phase2-runtime-config.yaml  preflight.sh  sbom.json  v4-phase2-workflows.yaml  v4-workflows.yaml
delivery/commercial/: capa-register.yaml  cost-model.yaml  incident-sla.yaml  incident-template.md  postmortem-template.md  sat-checklist.md  sla-template.md
deploy/ha/: docker-compose.ha.yml  nginx.conf  pg_promote.sh
deploy/monitoring/: alerts.yml  prometheus.yml
deploy/staging/: docker-compose.staging.yml
docs/adr/: ADR-053-agent-workflow-to-claude-skills.md  README.md  _template.md
docs/architecture/: 00-系统定位与架构总览.md  01-对话Agent层-Brain.md  02-Knowledge层.md  03-Skill层.md  04-Tool层.md  05-Gateway层.md  05a-API-Contract.md  06-基础设施层.md  07-部署与安全.md  08-附录.md
docs/data/: diyu-eval-generation-toolkit-v2.md  笛语 Agent 评测集完整清单.md
docs/frontend/: 00-architecture-overview.md  (+9 more)
frontend/: .eslintrc.js  lighthouserc.js  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
migrations/: env.py
scripts/: audit_aggregator.py  change_impact_router.sh  check_acceptance_commands.sh  check_acceptance_gate.py  check_adr_consistency.py  check_agent_dispatch.py  check_alert_routing.py  check_compliance_artifacts.py  check_contract_alignment.py  check_cross_validation.py  check_env_completeness.py  check_evidence_grade.py  check_frontend_depth.py  check_ha_validation.sh  check_incident_readiness.py  check_layer_deps.sh  check_manifest_drift.sh  check_migration.sh  check_milestone_ruling.py  check_no_mock.py  check_no_mock_ts.mjs  check_no_vacuous_pass.py  check_openapi_sync.sh  check_pentest_report.py  check_port_compat.sh  check_postmortem_capa.py  check_promise_registry.py  check_reverse_audit.py  check_rls.sh  check_slo_budget.py  check_ssot_drift.sh  check_task_schema.py  check_temporal_integrity.py  check_xnode_coverage.py  check_xnode_deep.py  count_task_cards.py  diyu_diagnose.sh  doctor.py  drill_dr_restore.sh  drill_release.sh  (+26 more)
src/: __init__.py  main.py
tests/: conftest.py
(+507 files in other folders)
